eventDetails page is done, just need to test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="enter_event_name">Enter Event Name</string>
     <string name="enter_event_location">Enter Event Location</string>
-    <string name="enter_event_date">Enter Event Date and Time</string>
+    <string name="enter_event_date">Enter Event Date</string>
     <string name="enter_event_capacity">Enter Event Capacity</string>
     <string name="enter_event_description">Enter Event Description</string>
 </resources>
