--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="enter_event_capacity">Enter Event Capacity</string>
     <string name="enter_event_description">Enter Event Description</string>
     <string name="cameraButtonText">Take picture of QR code</string>
+    <string name="title_profile_edit_activity">Profile</string>
 </resources>
