--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@ Donec maximus lectus aliquet sapien aliquet rutrum. Fusce vulputate, odio at int
     <string name="navigation_drawer_open">Open navigation Drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer\n</string>
     <string name="attendee_name">Name</string>
+    <string name="back_button">back button</string>
 </resources>
